src/objects/Customer_Requests__c.object
<CustomObject>
    <fields>
        <fullName>Activities_Performed_to_Resolve_Request__c</fullName>
        <inlineHelpText>Select the activities which you performed to complete the Customer Request</inlineHelpText>
        <label>Activities Performed to Resolve Request</label>
        <picklist>
            <picklistValues>
                <fullName>Home visit arranged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remote support arranged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Researching issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow up arranged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On hold - Part/software on order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On hold - Waiting on customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On hold - Waiting on volunteer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Resolved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Request cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Unable to contact customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Unable to complete request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Refer to another service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Refer to GVT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Not enough information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Not suitable for service</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Activity__c</fullName>
        <label>Activity</label>
        <picklist>
            <controllingField>Service__c</controllingField>
            <picklistValues>
                <fullName>Changing settings for accessibility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Choosing or using a talking book player</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installing broadband</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installing software (e.g. JAWS, NVDA, Supernova, Zoomtext)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Problems with broadband</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Problems with device or equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Problems with software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Setting up a new device or equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Virus or spam issues</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Advise_Referrer_of_Outcome__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Advise Referrer of Outcome</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allocated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allocated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Any_other_comments__c</fullName>
        <label>Any other comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Assigned_Volunteer__c</fullName>
        <description>Lookup field to hold the assigned volunteer (community user) for the Customer Request</description>
        <label>Assigned Volunteer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Customer Requests (Assigned Volunteer)</relationshipLabel>
        <relationshipName>Assigned_Customer_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Closed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Co_ordinator_ID__c</fullName>
        <formula>IF($User.Id =   Volunteer_Coordinator__r.Id , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Co-ordinator ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Address__c</fullName>
        <formula>Customer_Name__r.MailingStreet &amp; BR()&amp;
Customer_Name__r.MailingCity &amp; BR()&amp;
Customer_Name__r.MailingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Email__c</fullName>
        <formula>Customer_Name__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Feedback__c</fullName>
        <label>Customer Feedback</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Home_Phone__c</fullName>
        <formula>Customer_Name__r.HomePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Home Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <label>Customer Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Customer Requests</relationshipLabel>
        <relationshipName>Customer_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Phone__c</fullName>
        <formula>Customer_Name__r.OtherPhone</formula>
        <label>Customer Other Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Post_Code__c</fullName>
        <formula>Customer_Name__r.MailingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Post Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Request_Duration__c</fullName>
        <formula>(Date_Time_Closed__c  - Date_Time_Opened__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Request Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Request_Origin__c</fullName>
        <label>Origin</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Letter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Helpline</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_Time_Closed__c</fullName>
        <label>Date/Time Closed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Opened__c</fullName>
        <formula>CreatedDate</formula>
        <label>Date/Time Opened</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Device__c</fullName>
        <label>Device</label>
        <picklist>
            <picklistValues>
                <fullName>CCTV scanner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desktop PC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ebook reader, eg Kindle, Kobos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GPS navigation, eg Trekker Breeze</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kitchen equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Landline Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laptop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Magnifier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MP3 player</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio, CD player or HiFi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Smart phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tablet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Talking book player</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Talking clock or watch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV, eg set top box, audio description</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voice recorder</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Duration_Forumla__c</fullName>
        <formula>IF(ISNULL( RS_Duration_Minutes__c ),&quot;0 hr 0 min&quot;,
TEXT(FLOOR(( RS_Duration_Minutes__c )/60))
&amp;&quot; hr &quot;
&amp;TEXT(round(MOD(( RS_Duration_Minutes__c )/60,1)*60,0))
&amp;&quot; min&quot;)</formula>
        <label>Home Visits Duration</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Customer_Request_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Customer Request ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Request Location</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Mapping_Status__c</fullName>
        <label>Mapping Status</label>
        <picklist>
            <picklistValues>
                <fullName>Located</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Located Yet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google Exhausted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Problem With Address</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NVIS_Account_No__c</fullName>
        <externalId>true</externalId>
        <label>NVIS Account No.</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes_on_Activities_Performed__c</fullName>
        <inlineHelpText>Enter any further information about activities which you performed to resolve the request.  NOTE: please include any referral information e.g. if the customer would like other services.</inlineHelpText>
        <label>Notes on Activities Performed</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Home_Visits__c</fullName>
        <inlineHelpText>Displays the number of Home Visits made for the Customer Request</inlineHelpText>
        <label>Number of Home Visits</label>
        <summaryForeignKey>Time_Entry__c.Customer_Request__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Operating_System__c</fullName>
        <label>Operating System the customer is using</label>
        <picklist>
            <picklistValues>
                <fullName>Windows</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apple/iOS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Android</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chromebook</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Parent_Customer_Request__c</fullName>
        <inlineHelpText>Use if related to a previous request</inlineHelpText>
        <label>Parent Customer Request</label>
        <referenceTo>Customer_Requests__c</referenceTo>
        <relationshipLabel>Child Customer Requests</relationshipLabel>
        <relationshipName>Customer_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RNIB_Comments__c</fullName>
        <inlineHelpText>This field contains comments from the RNIB Group Volunteer Coordinator relating to the Customer Request</inlineHelpText>
        <label>RNIB Group Comments - VISIBLE BY ALL</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RS_Duration_Minutes__c</fullName>
        <label>Home Visits Duration (minutes)</label>
        <summarizedField>Time_Entry__c.Duration__c</summarizedField>
        <summaryForeignKey>Time_Entry__c.Customer_Request__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Refer_Type__c</fullName>
        <label>Referred by</label>
        <picklist>
            <picklistValues>
                <fullName>RNIB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Action for Blind People</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family/Friend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical professional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local blind society</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employment adviser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ECLO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other professional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Charities</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Referral_Contact_Name__c</fullName>
        <inlineHelpText>Only complete if the referral wants to know the outcome.</inlineHelpText>
        <label>Referral Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Customer Requests (Referral Contact Name)</relationshipLabel>
        <relationshipName>Customer_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referral_Email__c</fullName>
        <formula>Referral_Contact_Name__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Referral Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Organisation_Name__c</fullName>
        <formula>Referral_Contact_Name__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Referral Organisation Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Phone__c</fullName>
        <formula>Referral_Contact_Name__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Referral Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Referral</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <label>Request Type</label>
        <picklist>
            <picklistValues>
                <fullName>Hardware installation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardware trouble shooting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software installation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software trouble shooting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broadband installation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broadband trouble shooting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connect/set up PC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change settings for accessibility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Virus spam issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintenance/housekeeping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training /advice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV/set top box/DVD/video</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Universal remote control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Talking clocks/watches</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCTV scanners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Magnifiers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voice recorders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MP3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Note takers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Penfriend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio/CD/HiFi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GPS navigation e.g. Trekker Breeze</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Package and return products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Talking books</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Set up and demo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fault finding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pack and return player via post office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Help with book choice</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <label>Service</label>
        <picklist>
            <picklistValues>
                <fullName>Technology Support</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resolved - Ready for Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected - See RNIB Comments Field</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Pending Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Approved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Hours_Donated_to_Resolve__c</fullName>
        <inlineHelpText>Enter the total amount of hours taken to fully complete the Customer Request</inlineHelpText>
        <label>Total Number of Hours Donated to Resolve</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Volunteer_Coordinator_Email__c</fullName>
        <formula>Volunteer_Coordinator__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Volunteer Coordinator Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Volunteer_Coordinator_Phone__c</fullName>
        <formula>Volunteer_Coordinator__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Volunteer Coordinator Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Volunteer_Coordinator__c</fullName>
        <label>Volunteer Coordinator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customer_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Customer Request</label>
    <listViews>
        <fullName>All_Customer_Requests_Awaiting_Approval</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Closed__c</columns>
        <columns>Customer_Name__c</columns>
        <columns>Customer_Email__c</columns>
        <columns>Assigned_Volunteer__c</columns>
        <columns>Customer_Post_Code__c</columns>
        <columns>Customer_Request_Origin__c</columns>
        <columns>Date_Time_Opened__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Resolved - Ready for Approval</value>
        </filters>
        <filters>
            <field>Closed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Customer Requests Awaiting Approval</label>
    </listViews>
    <listViews>
        <fullName>All_Customer_Requests_Over_10_days</fullName>
        <columns>NAME</columns>
        <columns>Allocated__c</columns>
        <columns>Closed__c</columns>
        <columns>Customer_Name__c</columns>
        <columns>Customer_Phone__c</columns>
        <columns>Customer_Email__c</columns>
        <columns>Customer_Post_Code__c</columns>
        <columns>Customer_Request_Origin__c</columns>
        <columns>Date_Time_Opened__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Date_Time_Opened__c</field>
            <operation>greaterThan</operation>
            <value>LAST_N_DAYS:10</value>
        </filters>
        <label>All Customer Requests Over 10 days</label>
    </listViews>
    <listViews>
        <fullName>All_Open_Customer_Request</fullName>
        <columns>NAME</columns>
        <columns>Allocated__c</columns>
        <columns>Closed__c</columns>
        <columns>Customer_Name__c</columns>
        <columns>Customer_Phone__c</columns>
        <columns>Customer_Email__c</columns>
        <columns>Customer_Post_Code__c</columns>
        <columns>Customer_Request_Origin__c</columns>
        <columns>Date_Time_Opened__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>New,In Progress,On Hold,Resolved - Ready for Approval</value>
        </filters>
        <label>All Open Customer Requests</label>
    </listViews>
    <listViews>
        <fullName>All_Unassigned</fullName>
        <columns>NAME</columns>
        <columns>Allocated__c</columns>
        <columns>Closed__c</columns>
        <columns>Customer_Name__c</columns>
        <columns>Customer_Phone__c</columns>
        <columns>Customer_Email__c</columns>
        <columns>Customer_Post_Code__c</columns>
        <columns>Customer_Request_Origin__c</columns>
        <columns>Date_Time_Opened__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Allocated__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Unassigned</label>
    </listViews>
    <listViews>
        <fullName>All_Unassigned_past_48_hours</fullName>
        <columns>NAME</columns>
        <columns>Allocated__c</columns>
        <columns>Closed__c</columns>
        <columns>Customer_Name__c</columns>
        <columns>Customer_Phone__c</columns>
        <columns>Customer_Email__c</columns>
        <columns>Customer_Post_Code__c</columns>
        <columns>Customer_Request_Origin__c</columns>
        <columns>Date_Time_Opened__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Allocated__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Date_Time_Opened__c</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:2</value>
        </filters>
        <label>All Unassigned past 48 hours</label>
    </listViews>
    <listViews>
        <fullName>All_Unassigned_past_7_days</fullName>
        <columns>NAME</columns>
        <columns>Allocated__c</columns>
        <columns>Closed__c</columns>
        <columns>Customer_Name__c</columns>
        <columns>Customer_Phone__c</columns>
        <columns>Customer_Email__c</columns>
        <columns>Customer_Post_Code__c</columns>
        <columns>Customer_Request_Origin__c</columns>
        <columns>Date_Time_Opened__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Allocated__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Date_Time_Opened__c</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>All Unassigned past 7 days</label>
    </listViews>
    <listViews>
        <fullName>Closed_Requests</fullName>
        <columns>NAME</columns>
        <columns>Duration_Forumla__c</columns>
        <columns>Activity__c</columns>
        <columns>Date_Time_Closed__c</columns>
        <columns>Subject__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Closed__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Closed Requests</label>
    </listViews>
    <listViews>
        <fullName>Customer_Requests_created_Today</fullName>
        <columns>NAME</columns>
        <columns>Customer_Name__c</columns>
        <columns>Customer_Address__c</columns>
        <columns>Customer_Email__c</columns>
        <columns>Customer_Post_Code__c</columns>
        <columns>Device__c</columns>
        <columns>Activity__c</columns>
        <columns>Customer_Request_Origin__c</columns>
        <columns>Service__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Customer Requests created Today</label>
    </listViews>
    <listViews>
        <fullName>Open_Customer_Requests_Over_10_days</fullName>
        <columns>NAME</columns>
        <columns>Allocated__c</columns>
        <columns>Closed__c</columns>
        <columns>Customer_Name__c</columns>
        <columns>Customer_Phone__c</columns>
        <columns>Customer_Email__c</columns>
        <columns>Customer_Post_Code__c</columns>
        <columns>Customer_Request_Origin__c</columns>
        <columns>Date_Time_Opened__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Date_Time_Opened__c</field>
            <operation>greaterThan</operation>
            <value>LAST_N_DAYS:21</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New,In Progress,On Hold,On Hold - Waiting on Customer</value>
        </filters>
        <label>Open Customer Requests Over 21 days</label>
    </listViews>
    <listViews>
        <fullName>all</fullName>
        <columns>NAME</columns>
        <columns>Allocated__c</columns>
        <columns>Closed__c</columns>
        <columns>Status__c</columns>
        <columns>Customer_Name__c</columns>
        <columns>Customer_Post_Code__c</columns>
        <columns>Assigned_Volunteer__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Volunteer_Coordinator__c</columns>
        <columns>Customer_Request_Origin__c</columns>
        <columns>Date_Time_Opened__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Customer Requests</label>
    </listViews>
    <nameField>
        <displayFormat>CR-{00000}</displayFormat>
        <label>Customer Request ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Requests</pluralLabel>
    <recordTypes>
        <fullName>Customer_Requests_Internal</fullName>
        <active>true</active>
        <label>Customer Requests- Internal</label>
    </recordTypes>
    <recordTypes>
        <fullName>Customer_Requests_Portal</fullName>
        <active>true</active>
        <label>Customer Requests - Portal</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Must_have_activity_and_hours_before_subm</fullName>
        <active>true</active>
        <description>An activity and the number of hours donated must be entered before you can select this status to close the customer request</description>
        <errorConditionFormula>AND( ISPICKVAL( Status__c , &quot;Resolved - Ready for Approval&quot;), 
OR(ISBLANK(TEXT(Activity__c)),
(ISNULL(Total_Number_of_Hours_Donated_to_Resolve__c))
))</errorConditionFormula>
        <errorMessage>An activity and the number of hours donated must be entered before you can select this status to close the customer request</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Select_Referral_Contact_Name</fullName>
        <active>true</active>
        <errorConditionFormula>(ISBLANK(Referral_Contact_Name__c) = True) &amp;&amp;  (Advise_Referrer_of_Outcome__c = True)</errorConditionFormula>
        <errorDisplayField>Referral_Contact_Name__c</errorDisplayField>
        <errorMessage>Select the Referral Contact Name</errorMessage>
    </validationRules>
</CustomObject>